--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:dev
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console.enabled: true
-    console:
-      path: /h2-console
-      settings.trace: false
-      settings.web-allow-others: false
+    url: jdbc:postgresql://localhost:5432/test_db
+    driver-class-name: org.postgresql.Driver
+    username: test
+    password: 'test'
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: create
